<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProducto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutDetalle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-23dp"
            tools:layout_editor_absoluteY="661dp">
            <TextView
                android:id="@+id/textNombreDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/detalle_nombre_producto"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageDetalle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.41" />

            <ImageView
                android:id="@+id/imageDetalle"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/imagen"
                app:layout_constraintBottom_toTopOf="@+id/textDescripcionDetalle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.835" />

            <TextView
                android:id="@+id/textDescripcionDetalle"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/anadirCarritoBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/precioTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/detalle_precio"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/anadirCarritoBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescripcionDetalle"
                app:layout_constraintVertical_bias="0.131" />

            <Button
                android:id="@+id/anadirCarritoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anadir_al_carrito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/precioTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.902" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>